# Minstagram

./: README.md  main.py  pyproject.toml
app/: app.py  db.py  schemas.py
