[project]
name = "minstagram"
version = "0.1.0"
description = "Simple instagram clone project to learn FastAPI concepts fast"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.1",
]
